--- a/Iceshrimp.Frontend/Components/NotificationList.razor.css
+++ b/Iceshrimp.Frontend/Components/NotificationList.razor.css
@@ -3,7 +3,7 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .wrapper {
