--- a/Iceshrimp.Frontend/Pages/ProfileView.razor.css
+++ b/Iceshrimp.Frontend/Pages/ProfileView.razor.css
@@ -1,6 +1,6 @@
 .scroller {
     height: 100vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: clip;
 }
 
