--- a/Iceshrimp.Frontend/Pages/SingleNote.razor.css
+++ b/Iceshrimp.Frontend/Pages/SingleNote.razor.css
@@ -8,7 +8,7 @@
 }
 
 .scroller {
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: clip;
 }
 
